--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,15 +24,9 @@ jobs:
     steps:
      - name: Checkout to repository
        uses: actions/checkout@v3
-     - uses: BSFishy/meson-build@v1.0.3
-       with:
-         action: test
-         directory: build
-         setup-options: -Db_coverage=true
-         options: --verbose
-         meson-version: 0.53.2
-         ninja-version: 1.9.0.post1
-         gcovr-version: 4.2
+     - run : |
+       apt install python3 python3-pip python3-setuptools \
+                       python3-wheel ninja-build
      - run: |
          meson setup builddir && cd builddir
          meson compile
