--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,7 +26,7 @@ jobs:
        uses: actions/checkout@v3
      - name: Install meson
        run: |
-        apt install python3 python3-pip python3-setuptools python3-wheel ninja-build
+        sudo apt install -y python3 python3-pip python3-setuptools python3-wheel ninja-build
      - name: build NeoFOAM
        run: |
          meson setup builddir && cd builddir
