--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,6 +27,7 @@ jobs:
      - name: Install meson
        run: |
         sudo apt install -y python3 python3-pip python3-setuptools python3-wheel ninja-build
+        pip3 install --user meson
      - name: build NeoFOAM
        run: |
          meson setup builddir && cd builddir
