install deps manually

--- a/.github/workflows/format_check.yaml
+++ b/.github/workflows/format_check.yaml
@@ -11,7 +11,7 @@ jobs:
     - name: Install pip
       run: |
        sudo apt install -y python3 python3-pip python3-setuptools python3-wheel ninja-build
-       pip3 install --user meson
+       pip3 install click tqdm 
     - name: fetch foam-format
       run: |
         git clone https://github.com/exasim-project/foam-format
