install deps manually

--- a/.github/workflows/format_check.yaml
+++ b/.github/workflows/format_check.yaml
@@ -17,6 +17,7 @@ jobs:
         git clone https://github.com/exasim-project/foam-format
         cd foam-format
         pip3 install --user .
+        cp src/foam-format/clang_format.body /home/runner/.local/lib/python3.10/site-packages/foam_format/clang_format.body
     - name: Run format check
       run: |
         foam-format --target=src
