add spdx header

--- a/.github/workflows/header_check.yaml
+++ b/.github/workflows/header_check.yaml
@@ -11,4 +11,4 @@ jobs:
       uses: actions/checkout@v2
     - uses: enarx/spdx@master
       with:
-        licenses: Apache-2.0 MIT
+        licenses: GPL-3.0-or-later 
