removed unused files from documentation

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,13 +9,13 @@ topnav_title: NeoFOAM
 site_title: NeoFOAM
 # this appears in the html browser tab for the site title (seen mostly by search engines, not users)
 
-company_name: Copyright 2021 NeoFOAM
+company_name: NeoFOAM
 # this appears in the footer
 
-github_editme_path: exasim-project/NeoFOAM/blob/master/docs/
+github_editme_path: exasim-project/NeoFOAM/blob/main/docs/
 # if you're using Github, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
-google_analytics: UA-66296557-1
+google_analytics:
 # if you have google-analytics ID, put it in. if not, edit this value to blank.
 
 host: 127.0.0.1
@@ -32,11 +32,11 @@ exclude:
 
 feedback_subject_line: NeoFOAM
 
-feedback_email: test@gmail.com
+feedback_email: email
 # used as a contact email for the Feedback link in the top navigation bar
 
-# feedback_disable: true
-# if you uncomment the previous line, the Feedback link gets removed
+feedback_disable: true
+#if you uncomment the previous line, the Feedback link gets removed
 
 # feedback_text: "Need help?"
 # if you uncomment the previous line, it changes the Feedback text
@@ -73,26 +73,7 @@ defaults:
       search: true
       sidebar: home_sidebar
       topnav: topnav
-  -
-    scope:
-      path: ""
-      type: "tooltips"
-    values:
-      layout: "page"
-      search: true
-      tooltip: true
 
-  -
-    scope:
-      path: ""
-      type: "posts"
-    values:
-      layout: "post"
-      comments: false
-      # if you don't want to use Commento.io and just hide comments, change true to false wherever you see the comments property
-      search: true
-      sidebar: home_sidebar
-      topnav: topnav
 
 # these are defaults used for the frontmatter for these file types
 
@@ -100,7 +81,7 @@ sidebars:
 - home_sidebar
 - doc_sidebar
 
-description: "Intended as a documentation theme based on Jekyll for technical writers documenting software and other technical products, this theme has all the elements you would need to handle multiple products with both multi-level sidebar navigation, tags, and other documentation features."
+# description: "Intended as a documentation theme based on Jekyll for technical writers documenting software and other technical products, this theme has all the elements you would need to handle multiple products with both multi-level sidebar navigation, tags, and other documentation features."
 # the description is used in the feed.xml file
 
 # needed for sitemap.xml file only
@@ -111,4 +92,3 @@ baseurl: /NeoFOAM/docs
 github: [metadata]
 
 
-# Copyright 2023 company_name
