--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,3 +33,10 @@ jobs:
          meson setup builddir && cd builddir
          meson compile
          meson test
+
+     - name: Run Include What You Use
+       uses: EmilGedda/include-what-you-use-action@v1
+       with:
+         compilation-database-path: 'builddir'
+         output-format: 'iwyu' # Or 'clang'
+         no-error: 'false'
