--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,7 +35,7 @@ jobs:
          meson test
 
      - name: Run Include What You Use
-       uses: EmilGedda/include-what-you-use-action@v1
+       uses: EmilGedda/include-what-you-use-action
        with:
          compilation-database-path: 'builddir'
          output-format: 'iwyu' # Or 'clang'
