--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,7 +27,10 @@ jobs:
 
      - name: Install meson
        run: |
-        sudo apt install -y python3 python3-pip python3-setuptools python3-wheel ninja-build iwyu
+        sudo apt install -y \
+          python3 python3-pip python3-setuptools python3-wheel \
+          ninja-build \
+          iwyu iwyu_tool
         pip3 install --user meson
 
      - name: Build NeoFOAM
