--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,7 @@ jobs:
         sudo apt install -y \
           python3 python3-pip python3-setuptools python3-wheel \
           ninja-build \
-          iwyu iwyu_tool
+          iwyu
         pip3 install --user meson
 
      - name: Build NeoFOAM
@@ -45,4 +45,4 @@ jobs:
 
      - name: Execute iwyu
        run: |
-         iwyu_tool.py -p builddir
+         iwyu_tool -p builddir
