--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,4 +45,4 @@ jobs:
 
      - name: Execute iwyu
        run: |
-         iwyu_tool -p builddir
+         iwyu_tool -p builddir || true # don't fail for now
