sucessfully linked to OpenFOAM

--- a/meson.build
+++ b/meson.build
@@ -3,12 +3,15 @@ project('NeoFOAM', 'cpp',
   license: 'GPL-3.0-or-later'
   )
 
-of_thirdparty_proj = subproject('openfoam-thirdparty')
-openfoam_proj = subproject('openfoam')
+of_proj = subproject('OpenFOAM-v2306')
+openfoam_dep = of_proj.get_variable('openfoam_dep')
+meshTools_dep = of_proj.get_variable('meshTools_dep')
+finiteVolume_dep = of_proj.get_variable('finiteVolume_dep')
 
 inc = include_directories('include')
 
 subdir('include')
 subdir('src')
+subdir('applications')
 subdir('tests')
 
