--- a/subprojects/OpenFOAM-v2306/meson_options.txt
+++ b/subprojects/OpenFOAM-v2306/meson_options.txt
@@ -1,4 +1,4 @@
-option('of_path', type: 'string', value: '/media/henning/ssd1linux/OpenFOAM/OpenFOAM-v2306/', description: 'Path to search for OpenFOAM libraries')
+option('of_path', type: 'string', value: '../../OpenFOAM-v2306/', description: 'Path to search for OpenFOAM libraries')
 option('of_platform', type: 'string', value: 'platforms/linux64GccDPInt32Opt/lib', description: 'Path to search for OpenFOAM libraries')
 option('WM_LABEL_SIZE', type : 'combo', choices : ['32', '64'], value : '32', description : 'Size of the Integer Datatypes "label" and "uLabel"')
 option('WM_ARCH', type : 'string', value : '"linux64"', description : 'Target Architecture')
