--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.26.0)
+cmake_minimum_required(VERSION 3.28.0)
 
 project(
   NeoFOAM
@@ -6,29 +6,20 @@ project(
   DESCRIPTION
   "A prototype implementation of OpenFOAM in C++ 20")
 
-set(CMAKE_EXPERIMENTAL_CXX_MODULE_CMAKE_API "2182bf5c-ef0d-489a-91da-49dbc3090d2a")
-set(CMAKE_EXPERIMENTAL_CXX_MODULE_DYNDEP 1)
-string(CONCAT CMAKE_EXPERIMENTAL_CXX_SCANDEP_SOURCE
-  "${CMAKE_CXX_COMPILER_CLANG_SCAN_DEPS}"
-  " -format=p1689"
-  " --"
-  " <CMAKE_CXX_COMPILER> <DEFINES> <INCLUDES> <FLAGS>"
-  " -x c++ <SOURCE> -c -o <OBJECT>"
-  " -MT <DYNDEP_FILE>"
-  " -MD -MF <DEP_FILE>"
-  " > <DYNDEP_FILE>")
-set(CMAKE_EXPERIMENTAL_CXX_MODULE_MAP_FORMAT "clang")
-set(CMAKE_EXPERIMENTAL_CXX_MODULE_MAP_FLAG "@<MODULE_MAP_FILE>")
+option(NeoFOAM "double precission scalar" TRUE)
+option(NeoFOAM "double precission label" TRUE)
 
-
-# Default to C++ extensions being off. Clang's modules support have trouble
-# with extensions right now.
 set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_STANDARD 23)
 
-set(CMAKE_CXX_STANDARD 20)
-add_library(NeoFOAM)
-target_sources(NeoFOAM
-  PUBLIC
-    FILE_SET cxx_modules TYPE CXX_MODULES FILES
-    src/hello_world.cxx
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
 )
+FetchContent_MakeAvailable(googletest)
+include_directories(${googletest_SOURCE_DIR}/googletest/include)
+enable_testing()
+
+add_subdirectory(src)
+add_subdirectory(applications)
