WIP: first iteration of the matrix assembly benchmark for the legacy openfoam

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ThirdParty-v2306
 packagecache
 NeoFOAM
+.snakemake
+benchmark/matrixAssembly/ofcase
+benchmark/matrixAssembly/parameters
+benchmark/matrixAssembly/results
