--- a/applications/matrixAssembly/meson.build
+++ b/applications/matrixAssembly/meson.build
@@ -1,6 +1,6 @@
 
-executable('testof',
-           'testof.cpp',
+executable('matrixAssembly',
+           'matrixAssembly.cpp',
            dependencies: [openfoam_dep,finiteVolume_dep,meshTools_dep],
            install : true)
 
