--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,18 +26,12 @@ jobs:
      - name: Checkout to repository
        uses: actions/checkout@v3
 
-     - name: Install meson
-       run: |
-        sudo apt install -y \
-          python3 python3-pip python3-setuptools python3-wheel \
-          iwyu
-
      - name: Build NeoFOAM
        run: |
          mkdir build && cd build
          cmake -G Ninja ..
          cmake --build .
 
-     - name: Execute iwyu
-       run: |
-         iwyu_tool -p builddir || true # don't fail for now
+         #    - name: Execute iwyu
+         #      run: |
+         #        iwyu_tool -p builddir || true # don't fail for now
