--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,6 +26,10 @@ jobs:
      - name: Checkout to repository
        uses: actions/checkout@v3
 
+     - name: Install g++
+       run: |
+         apt install g++
+
      - name: Build NeoFOAM
        run: |
          mkdir build && cd build
