--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,9 +26,11 @@ jobs:
      - name: Checkout to repository
        uses: actions/checkout@v3
 
-     - name: Install g++
+     - name: Get versions
        run: |
-         apt install g++
+         clang --version
+         ninja --version
+         cmake --version
 
      - name: Build NeoFOAM
        run: |
