use clang for compile

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,7 +35,7 @@ jobs:
      - name: Build NeoFOAM
        run: |
          mkdir build && cd build
-         cmake -G Ninja ..
+         CC=clang CXX=clang++ cmake -GNinja ..
          cmake --build .
 
          #    - name: Execute iwyu
