--- a/.github/workflows/header_check.yaml
+++ b/.github/workflows/header_check.yaml
@@ -7,8 +7,10 @@ jobs:
   check-spdx-headers:
     runs-on: ubuntu-latest
     steps:
-    - name: checkout
-      uses: actions/checkout@v2
-    - uses: enarx/spdx@master
-      with:
-        licenses: GPL-3.0-or-later 
+    - name: install reuse linter 
+      run: |
+        pip3 install reuse
+
+    - name: Execute reuse linter 
+      run: |
+        reuse lint
