--- a/_typos.toml
+++ b/_typos.toml
@@ -1,3 +1,6 @@
+# SPDX-License-Identifier: GPL-3.0-or-later
+# SPDX-FileCopyrightText: 2023 NeoFOAM authors
+
 [files]
 extend-exclude = ["third_party/*"]
 
