--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,5 @@
+# SPDX-License-Identifier: GPL-3.0-or-later
+# SPDX-FileCopyrightText: 2023 NeoFOAM authors
+
 add_subdirectory(NeoFOAM)
 add_subdirectory(test)
