--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,9 +1,9 @@
-# SPDX-License-Identifier: GPL-3.0-or-later
+# SPDX-License-Identifier: MPL-2.0
 # SPDX-FileCopyrightText: 2023 NeoFOAM authors
 
 add_executable(
   core_test
-  "test_hello_world.cpp"
+  "test_time.cpp"
 )
 
 target_link_libraries(
