update cmake setup

--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ SunOS*Gcc*/
 platforms/
 
 # Top-level build directories
-/build/
+build/
 /platforms/
 
 # Reinstate wmake rules that might look like build directories
