--- a/src/NeoFOAM/CMakeLists.txt
+++ b/src/NeoFOAM/CMakeLists.txt
@@ -2,12 +2,15 @@
 # SPDX-FileCopyrightText: 2023 NeoFOAM authors
 
 add_library(NeoFOAM)
-add_library(NeoFOAM::NeoFOAM ALIAS NeoFOAM)
 
-target_include_directories(NeoFOAM PUBLIC ${CMAKE_SOURCE_DIR}/include)
+include(GNUInstallDirs)
+
+target_include_directories(NeoFOAM PUBLIC
+	"$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
+	"$<INSTALL_INTERFACE:${CMAKE_INSTALL_FULL_INCLUDEDIR}>")
 
 target_sources(NeoFOAM
-  PUBLIC
+  PRIVATE
     "core/Time.cpp"
     "core/Error.cpp"
 )
