--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,7 @@
 # SPDX-FileCopyrightText: 2023 NeoFOAM authors
 
 add_subdirectory(NeoFOAM)
-add_subdirectory(test)
+
+if (NEOFOAM_BUILD_TESTS)
+    add_subdirectory(test)
+endif()
