--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,7 @@
-# SPDX-License-Identifier: MPL-2.0
-# SPDX-FileCopyrightText: 2023 NeoFOAM authors
+# SPDX-License-Identifier: MPL-2.0 SPDX-FileCopyrightText: 2023 NeoFOAM authors
 
 add_subdirectory(NeoFOAM)
 
-if (NEOFOAM_BUILD_TESTS)
-    add_subdirectory(test)
+if(NEOFOAM_BUILD_TESTS)
+  add_subdirectory(test)
 endif()
