--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -1,3 +1,4 @@
-# SPDX-License-Identifier: MPL-2.0 SPDX-FileCopyrightText: 2023 NeoFOAM authors
+# SPDX-License-Identifier: Unlicense
+# SPDX-FileCopyrightText: 2023 NeoFOAM authors
 
 add_subdirectory(solver/minimal)
