--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,13 +17,13 @@ concurrency:
 
 jobs:
   build:
+    name: Build NeoFOAM
     strategy:
       fail-fast: false
       matrix: 
         compiler: [clang++, g++]
     runs-on: ubuntu-latest
     container: greole/neofoam
-    name: build NeoFOAM
     steps:
      - name: Checkout to repository
        uses: actions/checkout@v3
