--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,10 @@
 # SPDX-FileCopyrightText: 2023 NeoFOAM authors
 
 add_subdirectory(NeoFOAM)
+# add_subdirectory(DSL)
 
 if(NEOFOAM_BUILD_TESTS)
   add_subdirectory(test)
 endif()
+
+add_subdirectory(benchmarks)
