DOCS: added sphinx breathe as documentation tool

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ doc/Doxygen/DTAGS
 # Generated files in the main and doc directories
 /*.html
 /doc/*.html
+docs/_build
 
 # Untracked configuration/preferences files
 /etc/prefs.csh
