format Cmake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,10 @@ option(BUILD_NEOFOAM_DP_LABELS "double precision label" TRUE)
 option(BUILD_NEOFOAM_WITH_APPS "Build the applications folder" TRUE)
 option(BUILD_NEOFOAM_ENABLE_CUDA "Build with CUDA GPU support" TRUE)
 option(BUILD_NEOFOAM_WITH_TESTS "Build the unit tests" TRUE)
-option(BUILD_NEOFOAM_WITH_SYSTEM_KOKKOS "Rely on find_package to use pre-installed Kokkos, otherwise kokkos is build from source" FALSE)
+option(
+  BUILD_NEOFOAM_WITH_SYSTEM_KOKKOS
+  "Rely on find_package to use pre-installed Kokkos, otherwise kokkos is build from source"
+  FALSE)
 
 option(BUILD_NEOFOAM_SANITIZE_ADDRESS "Enable address sanitizer" FALSE)
 option(BUILD_NEOFOAM_SANITIZE_LEAK "Enable leak sanitizer" FALSE)
@@ -29,7 +32,6 @@ option(BUILD_NEOFOAM_CLANG_TIDY "Enable clang tidy static analyzer" FALSE)
 option(BUILD_NEOFOAM_PCH "Enable precompiled header" FALSE)
 
 include(cmake/kokkos.cmake)
-
 
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD 23)
