--- a/src/NeoFOAM/CMakeLists.txt
+++ b/src/NeoFOAM/CMakeLists.txt
@@ -9,12 +9,6 @@ target_include_directories(
   NeoFOAM PUBLIC "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
                  "$<INSTALL_INTERFACE:${CMAKE_INSTALL_FULL_INCLUDEDIR}>")
 
-target_sources(NeoFOAM
-	PRIVATE
-	"core/Time.cpp"
-	"core/Error.cpp"
-	)
+target_sources(NeoFOAM PRIVATE "core/Time.cpp" "core/Error.cpp")
 
-target_link_libraries(NeoFOAM
-	PRIVATE
-	Kokkos::kokkos)
+target_link_libraries(NeoFOAM PRIVATE Kokkos::kokkos)
