fix static checks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,11 +53,11 @@ endif()
 include(cmake/Sanitizer.cmake)
 
 include(cmake/StaticAnalyzers.cmake)
-if(NEOFOAM_ENABLE_CPP_CHECK)
-  myproject_enable_cppcheck(FALSE "")
+if(BUILD_NEOFOAM_CPP_CHECK)
+	NeoFOAM_enable_cppcheck(FALSE "")
 endif()
-if(NEOFOAM_ENABLE_CLANG_TIDY)
-  myproject_enable_cppcheck(FALSE "")
+if(BUILD_NEOFOAM_CLANG_TIDY)
+	NeoFOAM_enable_clang_tidy(FALSE "")
 endif()
 
 add_subdirectory(src)
