--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,5 +64,10 @@ add_custom_target(
   COMMAND find . -name CMakeLists.txt -exec cmake-format -i {} +
   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
 
+add_custom_target(
+  format
+  COMMAND find src applications -name "*.[c,h]*pp" -exec clang-format -i {} +
+  WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
+
 include(cmake/install_helpers.cmake)
 neofoam_install()
