adopt workflow to check all src paths

--- a/.github/workflows/format_check.yaml
+++ b/.github/workflows/format_check.yaml
@@ -3,7 +3,15 @@ on: [pull_request]
 run-name: Format Check
 
 jobs:
-  run:
+  formatting-check:
+    name: Formatting Check
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        path:
+          - 'src'
+          - 'applications'
+          - 'include'
     name: Format check with foam-format
     runs-on: ubuntu-latest
     steps:
@@ -12,4 +20,4 @@ jobs:
       uses: jidicula/clang-format-action@v4.11.0
       with:
         clang-format-version: '17'
-        check-path: 'src'
+        check-path: '${{ matrix.path }}'
