WIP: adding boundary conditions

--- a/src/NeoFOAM/CMakeLists.txt
+++ b/src/NeoFOAM/CMakeLists.txt
@@ -9,4 +9,17 @@ target_include_directories(
   NeoFOAM PUBLIC "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
                  "$<INSTALL_INTERFACE:${CMAKE_INSTALL_FULL_INCLUDEDIR}>")
 
-target_sources(NeoFOAM PRIVATE "core/Time.cpp" "core/Error.cpp")
+find_package(Kokkos REQUIRED)
+
+
+# target_sources(NeoFOAM PRIVATE "core/Time.cpp" "core/Error.cpp")
+target_sources(NeoFOAM
+               PRIVATE
+               "core/Time.cpp"
+               "core/Error.cpp"
+               "cellCentredFiniteVolume/bcFields/scalar/fvccScalarFixedValueBoundaryField.cpp")
+
+target_link_libraries(
+  NeoFOAM
+  PUBLIC Kokkos::kokkos)
+  # target_link_libraries(NeoFOAM)
