--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -10,9 +10,7 @@ on:
   
 jobs:
   build:
-
     runs-on: macos-latest
-
     steps:
     - name: Requirements
       run: brew install doxygen
@@ -24,14 +22,16 @@ jobs:
       uses: actions/checkout@v3
     - name: Build docs
       run: |
-        sphinx-quickstart . -q -p NeoFOAM -a "The NeoFOAM authors" -v "0.0.1" -l "en"
-        make html
-        pwd
-        cd _build/html
+        mkdir build
+        cd build
+        cmake -DBUILD_NEOFOAM_DOC=On ..
+        cmake --build . -t doxygen
+        cmake --build . -t sphinx
+        cd docs/sphinx
         touch .nojekyll
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gh-pages # The branch the action should deploy to.
-        FOLDER: _build/html # The folder the action should deploy.
+        FOLDER: build/docs/sphinx # The folder the action should deploy.
