--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -25,8 +25,8 @@ jobs:
         mkdir build
         cd build
         cmake -DBUILD_NEOFOAM_DOC=On ..
-        cmake --build . -t doxygen
-        cmake --build . -t sphinx
+        cmake --build . -t doc
+        cp -r docs/doxygen docs/sphinx
         cd docs/sphinx
         touch .nojekyll
     - name: Deploy
