fix license files

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -1,3 +1,5 @@
+# SPDX-License-Identifier: Unlicense
+# SPDX-FileCopyrightText: 2023 NeoFOAM authors
 # Doxyfile 1.8.16
 
 # This file describes the settings to be used by the documentation system
