--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,32 +8,36 @@ project(
   VERSION 0.1.0
   DESCRIPTION "An implementation of FOAM")
 
+# include kokkos.cmake before setting the project standard
+# to avoid issues with nvcc not supporting c++20 standard
+
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD 20)
 
-include(cmake/PreventInSourceBuilds.cmake)
-include(cmake/StandardProjectSettings.cmake)
+option(NEOFOAM_DP_SCALAR "double precision scalar" TRUE)
+option(NEOFOAM_DP_LABELS "double precision label" TRUE)
+option(NEOFOAM_WITH_APPS "Build the applications folder" TRUE)
+option(NEOFOAM_WITH_TESTS "Build the unit tests" TRUE)
+option(NEOFOAM_CUDA "Build with CUDA enabled " FALSE)
+option(NEOFOAM_OMP "Build with OpenMP enabled" FALSE)
 
-option(BUILD_NEOFOAM_DP_SCALAR "double precision scalar" TRUE)
-option(BUILD_NEOFOAM_DP_LABELS "double precision label" TRUE)
-option(BUILD_NEOFOAM_WITH_APPS "Build the applications folder" TRUE)
-option(BUILD_NEOFOAM_WITH_TESTS "Build the unit tests" TRUE)
-option(FORCE_NEOFOAM_BUILD_KOKKOS
-       "Forces NeoFOAM to build kokkos even if already present" FALSE)
-
-option(ENABLE_NEOFOAM_SANITIZE_ADDRESS "Enable address sanitizer" FALSE)
-option(ENABLE_NEOFOAM_SANITIZE_LEAK "Enable leak sanitizer" FALSE)
-option(ENABLE_NEOFOAM_SANITIZE_UB "Enable undefined behaviour sanitizer" FALSE)
-option(ENABLE_NEOFOAM_SANITIZE_THREAD "Enable thread sanitizer" FALSE)
-option(ENABLE_NEOFOAM_SANITIZE_MEMORY "Enable memory sanitizer" FALSE)
-option(ENABLE_NEOFOAM_CPP_CHECK "Enable cpp check static analyzer" FALSE)
-option(ENABLE_NEOFOAM_CLANG_TIDY "Enable clang tidy static analyzer" FALSE)
-option(ENABLE_NEOFOAM_PCH "Enable precompiled header" FALSE)
+option(NEOFOAM_SANITIZE_ADDRESS "Enable address sanitizer" FALSE)
+option(NEOFOAM_SANITIZE_LEAK "Enable leak sanitizer" FALSE)
+option(NEOFOAM_SANITIZE_UB "Enable undefined behaviour sanitizer" FALSE)
+option(NEOFOAM_SANITIZE_THREAD "Enable thread sanitizer" FALSE)
+option(NEOFOAM_SANITIZE_MEMORY "Enable memory sanitizer" FALSE)
+option(NEOFOAM_CPP_CHECK "Enable cpp check static analyzer" FALSE)
+option(NEOFOAM_CLANG_TIDY "Enable clang tidy static analyzer" FALSE)
+option(NEOFOAM_PCH "Enable precompiled header" FALSE)
 
 include(cmake/kokkos.cmake)
+include(cmake/PreventInSourceBuilds.cmake)
+include(cmake/StandardProjectSettings.cmake)
+include(cmake/CompilerWarnings.cmake)
+include(cmake/Sanitizer.cmake)
+include(cmake/StaticAnalyzers.cmake)
 
 add_library(project_options INTERFACE)
-include(cmake/CompilerWarnings.cmake)
 add_library(project_warnings INTERFACE)
 myproject_set_project_warnings(project_warnings ${myproject_WARNINGS_AS_ERRORS}
                                FALSE "" "" "")
@@ -43,9 +47,6 @@ if(BUILD_NEOFOAM_PCH)
                             <utility>)
 endif()
 
-include(cmake/Sanitizer.cmake)
-
-include(cmake/StaticAnalyzers.cmake)
 if(ENABLE_NEOFOAM_CPP_CHECK)
   neofoam_enable_cppcheck(FALSE "")
 endif()
