--- a/src/NeoFOAM/CMakeLists.txt
+++ b/src/NeoFOAM/CMakeLists.txt
@@ -9,7 +9,12 @@ target_include_directories(
   NeoFOAM PUBLIC "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
                  "$<INSTALL_INTERFACE:${CMAKE_INSTALL_FULL_INCLUDEDIR}>")
 
-target_sources(NeoFOAM PRIVATE "core/Time.cpp" "core/Error.cpp")
+target_sources(NeoFOAM
+       	PRIVATE
+       	"core/Time.cpp"
+       	"core/Error.cpp"
+       	"core/Kokkos.cpp"
+	)
 
 include(${CMAKE_SOURCE_DIR}/cmake/Sanitizer.cmake)
 enable_sanitizers(
@@ -18,3 +23,9 @@ enable_sanitizers(
   ENABLE_NEOFOAM_SANITIZE_MEMORY)
 
 target_link_libraries(NeoFOAM PRIVATE Kokkos::kokkos)
+
+if (${NEOFOAM_CUDA}) 
+	enable_language(CUDA)
+	find_package(CUDAToolkit REQUIRED)
+	target_include_directories(NeoFOAM PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
+endif()
