--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,21 +15,21 @@ set(CMAKE_CXX_STANDARD 17)
 option(FORCE_NEOFOAM_BUILD_KOKKOS
        "Forces NeoFOAM to build kokkos even if already present" FALSE)
 
-option(BUILD_NEOFOAM_DP_SCALAR "double precision scalar" TRUE)
-option(BUILD_NEOFOAM_DP_LABELS "double precision label" TRUE)
-option(BUILD_NEOFOAM_WITH_APPS "Build the applications folder" TRUE)
-option(BUILD_NEOFOAM_WITH_TESTS "Build the unit tests" TRUE)
+option(NEOFOAM_BUILD_DP_SCALAR "double precision scalar" TRUE)
+option(NEOFOAM_BUILD_DP_LABELS "double precision label" TRUE)
+option(NEOFOAM_BUILD_WITH_APPS "Build the applications folder" TRUE)
+option(NEOFOAM_BUILD_WITH_TESTS "Build the unit tests" TRUE)
 
-option(ENABLE_NEOFOAM_SANITIZE_ADDRESS "Enable address sanitizer" FALSE)
-option(ENABLE_NEOFOAM_SANITIZE_LEAK "Enable leak sanitizer" FALSE)
-option(ENABLE_NEOFOAM_SANITIZE_UB "Enable undefined behaviour sanitizer" FALSE)
-option(ENABLE_NEOFOAM_SANITIZE_THREAD "Enable thread sanitizer" FALSE)
-option(ENABLE_NEOFOAM_SANITIZE_MEMORY "Enable memory sanitizer" FALSE)
-option(ENABLE_NEOFOAM_CPP_CHECK "Enable cpp check static analyzer" FALSE)
-option(ENABLE_NEOFOAM_CLANG_TIDY "Enable clang tidy static analyzer" FALSE)
-option(ENABLE_NEOFOAM_PCH "Enable precompiled header" FALSE)
+option(NEOFOAM_ENABLE_SANITIZE_ADDRESS "Enable address sanitizer" FALSE)
+option(NEOFOAM_ENABLE_SANITIZE_LEAK "Enable leak sanitizer" FALSE)
+option(NEOFOAM_ENABLE_SANITIZE_UB "Enable undefined behaviour sanitizer" FALSE)
+option(NEOFOAM_ENABLE_SANITIZE_THREAD "Enable thread sanitizer" FALSE)
+option(NEOFOAM_ENABLE_SANITIZE_MEMORY "Enable memory sanitizer" FALSE)
+option(NEOFOAM_ENABLE_CPP_CHECK "Enable cpp check static analyzer" FALSE)
+option(NEOFOAM_ENABLE_CLANG_TIDY "Enable clang tidy static analyzer" FALSE)
+option(NEOFOAM_ENABLE_PCH "Enable precompiled header" FALSE)
 
-include(cmake/kokkos.cmake)
+include(cmake/Kokkos.cmake)
 include(cmake/PreventInSourceBuilds.cmake)
 include(cmake/StandardProjectSettings.cmake)
 include(cmake/CompilerWarnings.cmake)
@@ -41,15 +41,15 @@ add_library(project_warnings INTERFACE)
 myproject_set_project_warnings(project_warnings ${myproject_WARNINGS_AS_ERRORS}
                                FALSE "" "" "")
 
-if(BUILD_NEOFOAM_PCH)
+if(NEOFOAM_BUILD_PCH)
   target_precompile_headers(project_options INTERFACE <vector> <string>
                             <utility>)
 endif()
 
-if(ENABLE_NEOFOAM_CPP_CHECK)
+if(NEOFOAM_ENABLE_CPP_CHECK)
   neofoam_enable_cppcheck(FALSE "")
 endif()
-if(ENABLE_NEOFOAM_CLANG_TIDY)
+if(NEOFOAM_ENABLE_CLANG_TIDY)
   neofoam_enable_clang_tidy(FALSE "")
 endif()
 
