--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake -DBUILD_NEOFOAM_DOC=On ..
+        cmake -DNEOFOAM_BUILD_DOC=On ..
         cmake --build . -t doc
         cp -r docs/doxygen docs/sphinx
         cd docs/sphinx
