--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Requirements
       run: brew install doxygen
         && brew install sphinx-doc
-        && pip3 install sphinx-rtd-theme
+        && pip3 install furo
         && pip3 install breathe
         && pip3 install sphinx-sitemap
     - name: Checkout repo
