change build env to ubuntu

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -10,11 +10,11 @@ on:
   
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
     - name: Requirements
-      run: brew install doxygen
-        && brew install sphinx-doc
+      run: apt install doxygen
+        && brew install python3-sphinx 
         && pip3 install furo
         && pip3 install breathe
         && pip3 install sphinx-sitemap
