--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -13,8 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Requirements
-      run: apt install doxygen
-        && brew install python3-sphinx 
+      run: sudo apt install doxygen python3-sphinx 
         && pip3 install furo
         && pip3 install breathe
         && pip3 install sphinx-sitemap
