add compile time definition of label and scalar

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,14 @@ if(NEOFOAM_ENABLE_CLANG_TIDY)
 endif()
 
 add_subdirectory(src)
+
+if(${NEOFOAM_DP_SCALAR})
+  target_compile_definitions(NeoFOAM PUBLIC NEOFOAM_DP_SCALAR=1)
+endif()
+if(${NEOFOAM_DP_LABEL})
+  target_compile_definitions(NeoFOAM PUBLIC NEOFOAM_DP_LABEL=1)
+endif()
+
 if(NEOFOAM_BUILD_WITH_APPS)
   add_subdirectory(applications)
 endif()
