--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ option(NEOFOAM_BUILD_WITH_APPS "Build the applications folder" TRUE)
 option(NEOFOAM_BUILD_WITH_TESTS "Build the unit tests" TRUE)
 option(NEOFOAM_BUILD_APPS "Build the applications folder" TRUE)
 option(NEOFOAM_BUILD_TESTS "Build the unit tests" TRUE)
+option(NEOFOAM_BUILD_BENCHMARKS "Build benchmarks" TRUE)
 option(NEOFOAM_BUILD_DOC "Build documentation" FALSE)
 
 option(NEOFOAM_ENABLE_SANITIZE_ADDRESS "Enable address sanitizer" FALSE)
@@ -60,6 +61,8 @@ if(NEOFOAM_ENABLE_CLANG_TIDY)
 endif()
 
 add_subdirectory(src)
+add_subdirectory(test)
+add_subdirectory(benchmarks)
 
 if(${NEOFOAM_DP_SCALAR})
   target_compile_definitions(NeoFOAM PUBLIC NEOFOAM_DP_SCALAR=1)
